2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkmenushell.c (gtk_real_menu_shell_move_current): Added 
	comment to document reason for commenting out a block of code

2005-07-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkcellview.c (gtk_cell_view_size_allocate): adjust cell width to avoid truncation issues.

2005-07-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* apply all patches from 2.6.4-1.osso34.1

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.6.4 ===

	* NEWS: Updates

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenutoolbutton.c (button_state_changed_cb): 
	Fix prelighting.  (#157392, Vincent Noel, patch by
	Christian Persch)

	* gtk/gtkicontheme.c (theme_lookup_icon): Make 
	icon data caching work again.  (#168851, Alexander Larsson)

	* gdk-pixbuf/gdk-pixbuf.c:
	* gdk-pixbuf/gdk-pixbuf-features.h.in:
	* gtk/xdgmime/xdgmime.[hc]:
	Revert the previous change, since it breaks
	bin compat.

2005-03-01  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkkeyuni.c
	* gdk/gdkpixbuf-drawable.c
	* gdk/gdkrgb.c
	* gdk/x11/gdkdnd-x11.c
	* gdk/x11/gdkevents-x11.c
	* gdk/x11/gdkproperty-x11.c
	* gdk/x11/gdkvisual-x11.c
	* gdk-pixbuf/gdk-pixbuf.c
	* gdk-pixbuf/gdk-pixbuf-features.h.in
	* gtk/gtkaction.c
	* gtk/gtkbindings.c
	* gtk/gtkcolorbutton.c
	* gtk/gtkcombo.c
	* gtk/gtkcontainer.c
	* gtk/gtkfilechooserdefault.c
	* gtk/gtkfilesel.c
	* gtk/gtkgamma.c
	* gtk/gtkiconview.c
	* gtk/gtkinputdialog.c
	* gtk/gtkitemfactory.c
	* gtk/gtkmenu.c
	* gtk/gtktextview.c
	* gtk/gtktooltips.c
	* gtk/gtktreedatalist.c
	* gtk/gtkuimanager.c
	* gtk/tree_minus.xpm
	* gtk/tree_plus.xpm
	* gtk/xdgmime/xdgmime.c
	* gtk/xdgmime/xdgmime.h: 
	Move constant data to .rodata.

2005-02-28  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.6.3 ===

	* NEWS: Updates.

2005-02-27  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaction.c (connect_proxy): Improve the handling